--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -4,16 +4,10 @@
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Presidente</title>
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
-
-	<style type="text/css">
-		table, th, td {
-		    border: 1px solid black;
-		}
-	</style>
 </head>
 <body>
 	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
@@ -38,7 +32,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-2">
+					<div class="col-md-3">
 						<div class="card">
 						  	<div class="card-header">
 						    	Datos Personales:
@@ -57,7 +51,7 @@
 						<br>
 					</div>
 
-					<div class="col-md-10">
+					<div class="col-md-9">
 						<div class="row">
 							<div class="col-md-12">
 								<div class="jumbotron jumbotron-fluid">
@@ -66,35 +60,80 @@
 								    	<p class="lead">Presidente(a) de CREDIUDO</p>
 								  	</div>
 								</div>
-								<hr>
-								<div class="col-md-12">
-									<h3>Evaluaciones En Curso</h3>
-									<br>
-									<% if(evaluacion && evaluacion.length > 0) {%>
-										<table class="table">
-											<thead class="thead-dark">
-											    <tr>
-											      	<th scope="col">Nombre de Eval</th>
-											      	<th scope="col">Nucleo</th>
-											      	<th scope="col">Unidad</th>
-											      	<th scope="col">Acción</th>
-											    </tr>
-										  	</thead>
-										  	<tbody>
-												<% for(var i = 0; i < evaluacion.length; i ++) {%>
-											    	<% if(fecha_actual => evaluacion[i].fecha_i && fecha_actual <= evaluacion[i].fecha_f ) {%>
-												    	<tr>
-												      		<td><%= evaluacion[i].nombre %></td>
-												      		<td><%= evaluacion[i].nucleo.nombre %></td>
-												      		<td><%= evaluacion[i].unidad.nombre %></td>
-												      		<td><a href="/president/detalles/<%= evaluacion[i].id %>"><i class="fa fa-eye" style="font-size: 18pt;" title="Ver Detalles"></i></a></td>
-												    	</tr>
+								
+								<!--==============EVALUACIONES EN CURSO=================-->
+								<div class="card">
+									<div class="card-body">
+										<h3>Evaluaciones En Curso</h3>
+										<hr>
+
+										<% if(evaluacion && evaluacion.length > 0) {%>
+											<table class="table">
+												<thead>
+												    <tr>
+												      	<th scope="col">Nombre de Eval</th>
+												      	<th scope="col">Nucleo</th>
+												      	<th scope="col">Unidad</th>
+												      	<th scope="col">Fecha I</th>
+												      	<th scope="col">Fecha F</th>
+												      	<th scope="col">Acción</th>
+												    </tr>
+											  	</thead>
+											  	<tbody>
+													<% for(var i = 0; i < evaluacion.length; i ++) {%>
+												    	<% if(fecha_actual => evaluacion[i].fecha_i && fecha_actual <= evaluacion[i].fecha_f ) {%>
+													    	<tr>
+													      		<td><%= evaluacion[i].nombre %></td>
+													      		<td><%= evaluacion[i].nucleo.nombre %></td>
+													      		<td><%= evaluacion[i].unidad.nombre %></td>
+													      		<td><%= evaluacion[i].fecha_i.getDate() %>/<%= evaluacion[i].fecha_i.getMonth() + 1 %>/<%= evaluacion[i].fecha_i.getFullYear() %></td>
+													      		<td><%= evaluacion[i].fecha_f.getDate() %>/<%= evaluacion[i].fecha_f.getMonth() + 1 %>/<%= evaluacion[i].fecha_f.getFullYear() %></td>
+													      		<td><a href="/president/detalles/<%= evaluacion[i].id %>" class="btn btn-primary btn-sm">Ver</a></td>
+													    	</tr>
+														<%}%>
 													<%}%>
+											  	</tbody>
+											</table>
+										<%}%>				
+									</div>
+								</div>	
+
+								<br>
+								
+								<!--=============EVALUACIONES CULMINADAS==================-->
+								<% if(evalCulminada) {%>
+									<div class="card">
+										<div class="card-body">
+											<h3>Evaluaciones Culminadas</h3>
+											<hr>
+										</div>	
+										<table class="table">
+											<thead>
+												<tr>
+													<th scope="col">Nombre de Eval</th>
+													<th scope="col">Nucleo</th>
+													<th scope="col">Unidad</th>
+											      	<th scope="col">Fecha I</th>
+											      	<th scope="col">Fecha F</th>
+											      	<th scope="col">Acción</th>
+												</tr>
+											</thead>
+											<tbody>
+												<% for(var i = 0; i < evalCulminada.length; i ++) {%>
+													<tr>
+														<td><%= evalCulminada[i].nombre %></td>
+														<td><%= evalCulminada[i].nucleo.nombre %></td>
+														<td><%= evalCulminada[i].unidad.nombre %></td>
+														<td><%= evalCulminada[i].fecha_i.getDate() %>/<%= evalCulminada[i].fecha_i.getMonth() + 1 %>/<%= evalCulminada[i].fecha_i.getFullYear() %></td>
+														<td><%= evalCulminada[i].fecha_f.getDate() %>/<%= evalCulminada[i].fecha_f.getMonth() + 1 %>/<%= evalCulminada[i].fecha_f.getFullYear() %></td>
+														<td><a href="/president/detalles/<%= evalCulminada[i].id %>" class="btn btn-primary btn-sm">Ver</a></td>
+													</tr>
 												<%}%>
-										  	</tbody>
+											</tbody>
 										</table>
-									<%}%>		
-								</div>		
+									</div>
+								<%}%>
+								<br>
 							</div>
 						</div>
 						
