--- a/app/views/partials/president/navbar.html
+++ b/app/views/partials/president/navbar.html
@@ -14,7 +14,7 @@
 			</li>
 			      		
 			<li class="nav-item">
-			    <a class="nav-link" href="#">Linkin</a>
+			    <a class="nav-link" href="/president/historial">Historial</a>
 			</li>
 			      
 			<li class="nav-item dropdown">
