--- a/app/views/partials/empleado/navbar.html
+++ b/app/views/partials/empleado/navbar.html
@@ -12,14 +12,10 @@
 			<li class="nav-item active">
 			    <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
 			</li>
-			      		
-			<li class="nav-item">
-			    <a class="nav-link" href="#">Link</a>
-			</li>
 			      
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			    	Dropdown
+			    	Evaluación
 			    </a>
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
