--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -6,7 +6,10 @@
 
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<!-- Custom styles for this template -->
+		<!--Barra de Progreso-->
+		<script type="text/javascript" src="/js/pace.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
+		<!-- Pie de Pagina -->
     	<link href="/css/sticky-footer-navbar.css" rel="stylesheet">	
 
 	</head>
