--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -54,6 +54,18 @@
 					</div>
 
 					<div class="col-md-9">
+						<!--=======mensaje de alerta==========-->
+						<% if(message == false) {%>
+
+						<%} else {%>
+								<div class="alert alert-success alert-dismissible fade show" role="alert">
+						            <%= message %>
+						            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+						        </div>
+						<%}%>
+						<!--=======fin mensaje de alerta==========-->
 						<div class="row">
 							<div class="col-md-12">
 								<div class="jumbotron jumbotron-fluid">
