--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -90,6 +90,7 @@
 												      	<th scope="col">Unidad</th>
 												      	<th scope="col">Fecha I</th>
 												      	<th scope="col">Fecha F</th>
+												      	<th scope="col">Calificar</th>
 												      	<th scope="col">Acción</th>
 												    </tr>
 											  	</thead>
@@ -102,6 +103,9 @@
 													      		<td><%= evaluacion[i].unidad.nombre %></td>
 													      		<td><%= evaluacion[i].fecha_i.getDate() %>/<%= evaluacion[i].fecha_i.getMonth() + 1 %>/<%= evaluacion[i].fecha_i.getFullYear() %></td>
 													      		<td><%= evaluacion[i].fecha_f.getDate() %>/<%= evaluacion[i].fecha_f.getMonth() + 1 %>/<%= evaluacion[i].fecha_f.getFullYear() %></td>
+													      		<td>
+													      			<a href=""><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-bell">1
+													      		</td>
 													      		<td><a href="/president/detalles/<%= evaluacion[i].id %>" class="btn btn-primary btn-sm">Ver</a></td>
 													    	</tr>
 														<%}%>
@@ -111,7 +115,7 @@
 										<%}%>				
 									</div>
 								</div>	
-
+								<!--=========FIN EVALUACIONES EN CURSO=============-->
 								<br>
 								
 								<!--=============EVALUACIONES CULMINADAS==================-->
