--- a/app/views/empleado/observacion/index.html
+++ b/app/views/empleado/observacion/index.html
@@ -67,7 +67,13 @@
 					</div>
 
 					<div class="col-md-9">
-						
+						<div class="card">
+							<div class="card-body">
+								<h4>Observación: </h4>
+								<hr>
+								<p><%- Observacion.contenido %></p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
